// Extracted from: Spotify 1.2.52.442 (windows)

syntax = "proto3";

package spotify.event_sender.proto;

option optimize_for = CODE_SIZE;

message ApplicationDesktop {
    string version_string = 1;
    int64 version_code = 2;
    bytes session_id = 3;
}
